Fix: Cart Price Spacing bug

--- a/src/views/CartPage/CartPage.scss
+++ b/src/views/CartPage/CartPage.scss
@@ -54,6 +54,7 @@
           }
 
           .cart-product-info {
+            width: 100%;
             display: flex;
             flex-direction: column;
 
